--- a/style.css
+++ b/style.css
@@ -1,8 +1,81 @@
+@import url(https://kinsta.com/es/blog/fuentes-seguras-para-la-web/#7-candara);
+
 body{
     font-family: 'candara', sans-serif;
     margin: 10px;
-    color: #c999d8;
+    color: #ffffff;
+    background-color: #c999d8;
 
 }
 
 
+progress {
+    background: rgba(95, 30, 30, 0.1);
+    border-radius: 20px;
+    align-items: center;
+    position: relative;
+    height: 20px;
+    width: 200px;
+  }
+
+header {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 20px;
+    margin-bottom: 20px;
+}
+
+h1 {
+    margin-top: 2;
+    font-size: 300%;
+}
+
+h2 {
+    margin-bottom: 8px;
+    font-size: 180%;
+}
+
+nav {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    text-align: center;
+}
+
+nav a {
+    text-decoration: none;
+    color: #333;
+    padding: 10px;
+    display: inline-block;
+}
+
+nav a:hover {
+    background-color: #ddd;
+}
+
+main {
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+section {
+    padding: 20px;
+    border: 1px solid #ddd;
+    margin-bottom: 20px;
+}
+
+#contenedor{
+    box-sizing: border-box;
+    width: 70%;
+    height: 130%;
+    max-width: 900px;
+    text-align: left;
+    position: static;
+    inset: 0;
+    margin: 15%;
+    border-radius: 20px;
+    overflow: hidden; 
+    box-shadow: 0 20px 28px rgba(0, 0, 0, 0.555), 
+    0 10px 10px rgba(0, 0, 0, 0.356);
+}
